--- a/scatterplot.html
+++ b/scatterplot.html
@@ -7,7 +7,9 @@
 		<script src='d3.min.js'></script>
 	</head>
 	<body>
-	<!-- <h1> Alp D'Huez fastest times and doping use</h1> -->
+	<h2> Doping in Professional Bicycle Racing</h2>
+	<h3>35 Fastest times up Alpe d'Huez</h3>
+	<p>Normalized to 13.8km distance</p>
 		<script src='scatterplot.js'></script>
 	</body>
 </html>
